Changed .recommended-tour-divs margin so col-sm-12 aligns correctly

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -60,7 +60,7 @@
 .recommended-tour-divs {
     padding: 0px 10px;
     border: 5px solid #142546;
-    margin: 15px;
+    margin: 15px 0px;
 }
 
 .recommended-header {
